<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
   android:orientation="vertical">

   <Button
       android:id="@+id/alert_dialog"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/allert_dialog_1"
       />
   <Button
       android:id="@+id/alert_dialog_3"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/allert_dialog_3"
       />

   <Button
       android:id="@+id/allert_dialog_list"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/allert_dialog_list"
       />

   <Button
       android:id="@+id/allert_dialog_list_singl"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/allert_dialog_list_single"
       />

   <Button
       android:id="@+id/allert_dialog_mult"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/allert_dialog_list_multi"
       />

</LinearLayout>